test/types/scalar/bradc/assignUintNegative.good
assignUintNegative.chpl:3: error: Cannot assign to uint(64) from int(64)
